--- a/index.html
+++ b/index.html
@@ -431,6 +431,30 @@
               </div>
             </div>
           </div>
+		</div>
+		<div class="row d-flex justify-content-center"> 
+		  <div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+			<a href="https://github.com/Sanikaaaaaa/Retail-Store-Analysis.git" class="block-20 zoom-effect" style="background-image: url('images/proj_3.png');">
+			</a>
+			<div class="text mt-3 float-right d-block">
+
+			  <h3 class="heading"><a href="https://github.com/Sanikaaaaaa/Retail-Store-Analysis.git">Data Analysis on Retail Store using Python, MS-Excel, MySQL</a></h3>
+			  <p>Performed Data Analysis on retail store using Python, Ms-Excel and MySQL to derive meaningful business insights and product trends.</p>
+			</div>
+		  </div>
+		</div>
+		<div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+			<a href="https://github.com/Sanikaaaaaa/Pizza-Sales-using-SQL.git" class="block-20 zoom-effect" style="background-image: url('images/proj_4.png');">
+			</a>
+			<div class="text mt-3 float-right d-block">
+
+			  <h3 class="heading"><a href="https://github.com/Sanikaaaaaa/Pizza-Sales-using-SQL.git">PizzaHut Sales Analysis MySQL</a></h3>
+			  <p>Performed Analysis using MySQL Queries to bring out effective Customer Insights, to understand Customer Preferences and Behaviour and Boost Sales.</p>
+			</div>
+		  </div>
+		</div>
           <!-- <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
